--- a/_posts/2016-08-27-开发自己的语言.md
+++ b/_posts/2016-08-27-开发自己的语言.md
@@ -45,14 +45,16 @@ comments: true
 根据这个规则，我们写一个函数
 
 ```scheme
+(define true #t)
+(define false #f)
 (define (my-eval exp env)
   (cond ((self-evaluating? exp) exp)
         (else (error "Unknown expression type -- EVAL" exp))))
 
 (define (self-evaluating? exp)
-  (cond ((number? exp) #t)
-        ((string? exp) #t)
-        (else #f)))
+  (cond ((number? exp) true)
+        ((string? exp) true)
+        (else false)))
 ```
 
 我们运行一下这个函数。首先我们需要安装一个 scheme 解释器，参考 <https://github.com/cisco/ChezScheme>
@@ -98,7 +100,116 @@ Type (debug) to enter the debugger.
 
 好了，我们继续迭代开发我们的解释器。
 
-### 特殊型 (special form)
 
-#### quote 引用
-这个规则也是一个终止条件。
+### my-quote
+
+这个规则也是一个终止条件。如果一个 `s-exp` 是一个 `list` ，第一个元素
+是 `my-quote`，第二个元素任何一个 `s-exp` X，那么求值结果就是 X 。
+
+```
+(my-quote 1) => 1
+(my-quote 1.2) => 1.2
+(my-quote "abc") => "abc
+(my-quote (1 2 3)) => (1 2 3)
+(my-quote a-symbol) => a-symbol
+(my-quote my-quote) => my-quote
+```
+
+`s-exp` 中有一个重要的数据类型，就是 symbol 。 quote 可以得到 symbol
+本身。
+
+
+```scheme
+(define (my-eval exp env)
+  (cond (......
+        ((quoted? exp) (text-of-quotation exp))
+         ......
+        (else (error "Unknown expression type -- EVAL" exp))))
+```
+
+我们看看 `quoted?` 和 `(text-of-quotation)` 怎么实现的？
+
+```schemem
+(define (quoted? exp)
+  (tagged-list? exp 'my-quote))
+(define (text-of-quotation exp) (cadr exp))
+(define (tagged-list? exp tag)
+  (if (pair? exp)
+      (eq? (car exp) tag)
+      false))
+```
+
+看看运行结果
+
+```
+> (load "eval1.scm")
+> (my-eval '(my-quote 1) '())
+1
+> (my-eval '(my-quote 1.2) '())
+1.2
+> (my-eval '(my-quote "hello") '())
+"hello"
+> (my-eval '(my-quote a-symbol) '())
+a-symbol
+> (my-eval '(my-quote my-quote) '())
+my-quote
+```
+
+`eval1.scm` 的完整内容如下
+
+```scheme
+(define true #t)
+(define false #f)
+(define (my-eval exp env)
+  (cond ((self-evaluating? exp) exp)
+        ((quoted? exp) (text-of-quotation exp))
+        (else (error "Unknown expression type -- EVAL" exp))))
+
+(define (self-evaluating? exp)
+  (cond ((number? exp) true)
+        ((string? exp) true)
+        (else false)))
+
+(define (quoted? exp)
+  (tagged-list? exp 'my-quote))
+(define (text-of-quotation exp) (cadr exp))
+(define (tagged-list? exp tag)
+  (if (pair? exp)
+      (eq? (car exp) tag)
+      false))
+
+```
+
+一个好的程序风格是，多写一些小的函数，然后组合这些函数。函数都有名字，
+可以描述自己的作用。例如 `text-of-quotation` 。其实这个函数本质上和
+`cadr` 没有任何区别。但是在逻辑层次上，`text-of-quotation` 是更加高层
+的函数，`cadr` 是更加底层的函数。这种逻辑层次的划分，可以提高程序的可
+读性。
+
+因为 `eval` , `quote` , `if` , `cond` 等等，都是 scheme 自带的关键字，
+原 SICP 中直接使用的这些关键字，为了加以区别，我修改成了 `my-eval` ,
+`my-quote`, `my-if`, `my-cond` 等等。这种区分不是必须的。
+
+### my-if
+
+支持条件表达式，输入 `s-exp` 是一个 list ，有四个元素：
+
+ 1. 第一个元素是 `my-if` ，表明是一个条件表达式。
+ 2. 第二个元素是判断条件 `<C>`
+ 3. 第三个元素是 `<T>` 为真的时候，`s-exp` 的求值结果。
+ 4. 第三个元素是 `<F>` 为假的时候，`s-exp` 的求值结果。
+
+
+这里有一个语言设计的问题，是否有必要增加一个 boolean 的数据类型？什么
+是真，什么是假？这里有很多让人难以捉摸的小细节。这个问题也是各种语言之
+间争论很久的话题。为了简单，我们不在这个问题上展开讨论，我们不增加新的
+数据类型，认为符号(symbol) `true` 是真，其他值都是假。
+
+
+```scheme
+(define (my-eval exp env)
+  (cond (......
+        ((if? exp) (eval-if exp env))
+         ......
+        (else (error "Unknown expression type -- EVAL" exp))))
+```
