--- a/_posts/2016-08-27-开发自己的语言.md
+++ b/_posts/2016-08-27-开发自己的语言.md
@@ -213,3 +213,50 @@ my-quote
          ......
         (else (error "Unknown expression type -- EVAL" exp))))
 ```
+
+先看看 `if?` 的实现。
+
+```scheme
+(define (if? exp) (tagged-list? exp 'my-if))
+```
+
+感谢逻辑分层的代码风格，`if?` 的实现的可读性就很好了。
+
+我们看看关键的 `eval-if` 怎么实现的。
+
+```scheme
+(define (eval-if exp env)
+  (if (true? (eval (if-predicate exp) env))
+      (my-eval (if-consequent exp) env)
+      (my-eval (if-alternative exp) env)))
+
+(define (eval-if exp env)
+  (if (true? (my-eval (if-predicate exp) env))
+      (my-eval (if-consequent exp) env)
+      (my-eval (if-alternative exp) env)))
+```
+
+这里有两点需要注意
+
+ 1. 递归调用， `eval-if` 递归调用了 `my-eval` ，可以看到递归调用的强大之处。
+ 2. 求值顺序。
+
+“求值顺序” 是一门语言的一个重大的设计问题。不同的求值顺序，导致完全不同
+的效果。这里我们注意到，如果求值条件为真，那么假的分支是不做求值的。如
+果求值条件为假，那么真的分支是不会求职的。这种设计叫做短路求值
+(short-circuit)。 主流语言都是这么设计的。求值顺序是一个很重要的课题，
+这里不展开讨论。
+
+
+看看其他辅助函数如何实现的。这里再次应用了逻辑分层的代码风格。
+
+```scheme
+(define (if-predicate exp) (cadr exp))
+(define (if-consequent exp) (caddr exp))
+(define (if-alternative exp)
+  (if (not (null? (cdddr exp)))
+      (cadddr exp)
+      'false))
+(define (true? exp)
+  (eq? exp 'true))
+```
