--- a/_posts/2016-08-27-开发自己的语言.md
+++ b/_posts/2016-08-27-开发自己的语言.md
@@ -260,3 +260,54 @@ my-quote
 (define (true? exp)
   (eq? exp 'true))
 ```
+
+我们看看程序的执行效果
+
+
+```
+> (my-eval '(my-if (my-quote true) 1 2) '())
+1
+> (my-eval '(my-if (my-quote false) 1 2) '())
+2
+```
+
+非常好。 这里是完整的代码
+
+```scheme
+(define true #t)
+(define false #f)
+(define (my-eval exp env)
+  (cond ((self-evaluating? exp) exp)
+        ((quoted? exp) (text-of-quotation exp))
+        ((if? exp) (eval-if exp env))
+        (else (error "Unknown expression type -- EVAL" exp))))
+
+(define (self-evaluating? exp)
+  (cond ((number? exp) true)
+        ((string? exp) true)
+        (else false)))
+(define (if? exp) (tagged-list? exp 'my-if))
+
+(define (eval-if exp env)
+  (if (true? (my-eval (if-predicate exp) env))
+      (my-eval (if-consequent exp) env)
+      (my-eval (if-alternative exp) env)))
+
+(define (if-predicate exp) (cadr exp))
+(define (if-consequent exp) (caddr exp))
+(define (if-alternative exp)
+  (if (not (null? (cdddr exp)))
+      (cadddr exp)
+      'false))
+(define (true? exp)
+  (eq? exp 'true))
+
+(define (quoted? exp)
+  (tagged-list? exp 'my-quote))
+(define (text-of-quotation exp) (cadr exp))
+(define (tagged-list? exp tag)
+  (if (pair? exp)
+      (eq? (car exp) tag)
+      false))
+
+```
