--- a/_posts/2016-08-27-开发自己的语言.md
+++ b/_posts/2016-08-27-开发自己的语言.md
@@ -229,11 +229,6 @@ my-quote
   (if (true? (eval (if-predicate exp) env))
       (my-eval (if-consequent exp) env)
       (my-eval (if-alternative exp) env)))
-
-(define (eval-if exp env)
-  (if (true? (my-eval (if-predicate exp) env))
-      (my-eval (if-consequent exp) env)
-      (my-eval (if-alternative exp) env)))
 ```
 
 这里有两点需要注意
@@ -311,3 +306,82 @@ my-quote
       false))
 
 ```
+
+### 函数的求值
+
+什么是函数表达式，其实就是著名的 lambda 表达式。lambda 表达式格式如下
+
+```
+(my-lambda <PARAM-LIST> <FUN-BODY>)
+```
+
+`PARAM-LIST` 是一个变量列表，引入变量的作用域，也叫环境。我们在求值
+`FUN-BODY` 的时候，就在最内层的环境开始，有里向外的搜索变量。重名的时
+候，内层变量先起作用，就这个就是所谓的阴影效果 (shadow) 。
+
+求值一个 lambda 表达式的时候，返回值就是一个 “函数” 。
+
+程序内部，如何表达一个函数呢？这也是一个重大的语言设计问题。编译型还是
+解释型？目标语言的选择，字节码，还是机器码，还是其他的中间语言？
+
+我们这个简单的语言中，我们就用 list 来表示。
+
+```scheme
+(define (make-procedure parameters body env)
+   (list 'procedure parameters body env))
+```
+
+可见一个函数有三个元素，参数列表，函数体，和环境。
+
+那么，我们先实现一个 lambda 表达式的解析。
+
+```
+(define (my-eval exp env)
+  (cond (.......
+        ((lambda? exp)
+         (make-procedure (lambda-parameters exp)
+                         (lambda-body exp)
+                         env))
+        ......
+```
+
+其他几个辅助函数的实现
+
+```
+(define (lambda? exp) (tagged-list? exp 'my-lambda))
+(define (lambda-parameters exp) (cadr exp))
+(define (lambda-body exp) (cddr exp))
+(define (make-procedure parameters body env)
+  (list 'procedure parameters body env))
+```
+
+
+
+
+```
+> (lambda? '(my-lambda 1))
+#f
+> (lambda-parameters '(my-lambda (a b) (+ a b)))
+(a b)
+> (lambda-body '(my-lambda (a b) (+ a b)))
+((+ a b))
+> (make-procedure '(a b) '((+ a b)) '())
+(procedure (a b) ((+ a b)) ())
+> (my-eval '(my-lambda (a b) (+ a b)) '())
+(procedure (a b) ((+ a b)) ())
+```
+
+太好了，我们可以解析 lambda 表达式了。
+
+###
+
+
+
+一个变量用一个 symbol 来表示，也就是说，如果 `my-eval` 输入 `s-exp` 是
+一个 symbol 的时候，`my-eval` 怎么求值。
+
+变量的作用域也是一个重大的语言设计问题。不同的语言有不同的设计，展现了
+不同语言丰富的表达能力。现在主流语言是“词法作用域” (lexical scope) 。
+我们做出一个简单的词法作用域的实现。
+
+讲词法作用域的时候，不可避免的要说到函数的定义。
