--- a/_posts/2016-08-27-开发自己的语言.md
+++ b/_posts/2016-08-27-开发自己的语言.md
@@ -307,6 +307,108 @@ my-quote
 
 ```
 
+### 代码块求值
+
+这个功能是一个很方便的功能。如果 `<s-exp>` 是下面的形式
+
+```
+(my-begin <E1> <E2> .... <En>)
+```
+
+那么我们对 E1 , E2 ，.... , En 分别求值，整个表达式的值就是 En 的求值结果。
+
+```
+(define (my-eval exp env)
+  (cond (.......
+        ((begin? exp)
+         (eval-sequence (begin-actions exp) env))
+        ......
+```
+
+看看关键函数 `eval-sequence` 的实现
+
+```
+(define (eval-sequence exps env)
+  (cond ((last-exp? exps) (eval (first-exp exps) env))
+        (else (my-eval (first-exp exps) env)
+              (eval-sequence (rest-exps exps) env))))
+```
+
+这里注意
+ 1. 求值顺序
+ 2. 递归调用 `my-eval`
+ 3. 中间的表达式的求值结果被丢弃了
+
+看看其他几个辅助函数的实现
+
+```
+(define (begin? exp) (tagged-list? exp 'my-begin))
+(define (begin-actions exp) (cdr exp))
+(define (last-exp? seq) (null? (cdr seq)))
+(define (first-exp seq) (car seq))
+(define (rest-exps seq) (cdr seq))
+```
+
+看看程序的执行效果
+
+```
+> (load "eval3.scm")
+> (my-eval '(my-begin 1 2) '())
+```
+
+下面是完整的程序代码
+
+```
+(define true #t)
+(define false #f)
+(define (my-eval exp env)
+  (cond ((self-evaluating? exp) exp)
+        ((quoted? exp) (text-of-quotation exp))
+        ((if? exp) (eval-if exp env))
+        ((begin? exp)
+         (eval-sequence (begin-actions exp) env))
+        (else (error "Unknown expression type -- EVAL" exp))))
+
+(define (self-evaluating? exp)
+  (cond ((number? exp) true)
+        ((string? exp) true)
+        (else false)))
+(define (if? exp) (tagged-list? exp 'my-if))
+
+(define (eval-if exp env)
+  (if (true? (my-eval (if-predicate exp) env))
+      (my-eval (if-consequent exp) env)
+      (my-eval (if-alternative exp) env)))
+
+(define (if-predicate exp) (cadr exp))
+(define (if-consequent exp) (caddr exp))
+(define (if-alternative exp)
+  (if (not (null? (cdddr exp)))
+      (cadddr exp)
+      'false))
+(define (true? exp)
+  (eq? exp 'true))
+
+(define (eval-sequence exps env)
+  (cond ((last-exp? exps) (my-eval (first-exp exps) env))
+        (else (my-eval (first-exp exps) env)
+              (eval-sequence (rest-exps exps) env))))
+
+(define (begin? exp) (tagged-list? exp 'my-begin))
+(define (begin-actions exp) (cdr exp))
+(define (last-exp? seq) (null? (cdr seq)))
+(define (first-exp seq) (car seq))
+(define (rest-exps seq) (cdr seq))
+
+(define (quoted? exp)
+  (tagged-list? exp 'my-quote))
+(define (text-of-quotation exp) (cadr exp))
+(define (tagged-list? exp tag)
+  (if (pair? exp)
+      (eq? (car exp) tag)
+      false))
+```
+
 ### 函数的求值
 
 什么是函数表达式，其实就是著名的 lambda 表达式。lambda 表达式格式如下
@@ -373,7 +475,69 @@ my-quote
 
 太好了，我们可以解析 lambda 表达式了。
 
-###
+这里是完整的代码
+
+```scheme
+(define true #t)
+(define false #f)
+(define (my-eval exp env)
+  (cond ((self-evaluating? exp) exp)
+        ((quoted? exp) (text-of-quotation exp))
+        ((if? exp) (eval-if exp env))
+        ((begin? exp)
+         (eval-sequence (begin-actions exp) env))
+        ((lambda? exp)
+         (make-procedure (lambda-parameters exp)
+                         (lambda-body exp)
+                         env))
+        (else (error "Unknown expression type -- EVAL" exp))))
+
+(define (self-evaluating? exp)
+  (cond ((number? exp) true)
+        ((string? exp) true)
+        (else false)))
+(define (if? exp) (tagged-list? exp 'my-if))
+
+(define (eval-if exp env)
+  (if (true? (my-eval (if-predicate exp) env))
+      (my-eval (if-consequent exp) env)
+      (my-eval (if-alternative exp) env)))
+
+(define (if-predicate exp) (cadr exp))
+(define (if-consequent exp) (caddr exp))
+(define (if-alternative exp)
+  (if (not (null? (cdddr exp)))
+      (cadddr exp)
+      'false))
+(define (true? exp)
+  (eq? exp 'true))
+
+(define (lambda? exp) (tagged-list? exp 'my-lambda))
+(define (lambda-parameters exp) (cadr exp))
+(define (lambda-body exp) (cddr exp))
+(define (make-procedure parameters body env)
+  (list 'procedure parameters body env))
+
+(define (eval-sequence exps env)
+  (cond ((last-exp? exps) (my-eval (first-exp exps) env))
+        (else (my-eval (first-exp exps) env)
+              (eval-sequence (rest-exps exps) env))))
+
+(define (begin? exp) (tagged-list? exp 'my-begin))
+(define (begin-actions exp) (cdr exp))
+(define (last-exp? seq) (null? (cdr seq)))
+(define (first-exp seq) (car seq))
+(define (rest-exps seq) (cdr seq))
+
+(define (quoted? exp)
+  (tagged-list? exp 'my-quote))
+(define (text-of-quotation exp) (cadr exp))
+(define (tagged-list? exp tag)
+  (if (pair? exp)
+      (eq? (car exp) tag)
+      false))
+```
+
 
 
 
