--- a/_posts/2016-08-27-开发自己的语言.md
+++ b/_posts/2016-08-27-开发自己的语言.md
@@ -449,7 +449,7 @@ my-quote
 
 其他几个辅助函数的实现
 
-```
+```scheme
 (define (lambda? exp) (tagged-list? exp 'my-lambda))
 (define (lambda-parameters exp) (cadr exp))
 (define (lambda-body exp) (cddr exp))
