--- a/_posts/2016-08-27-开发自己的语言.md
+++ b/_posts/2016-08-27-开发自己的语言.md
@@ -129,7 +129,7 @@ Type (debug) to enter the debugger.
 
 我们看看 `quoted?` 和 `(text-of-quotation)` 怎么实现的？
 
-```schemem
+```scheme
 (define (quoted? exp)
   (tagged-list? exp 'my-quote))
 (define (text-of-quotation exp) (cadr exp))
