--- a/_posts/2016-08-27-开发自己的语言.md
+++ b/_posts/2016-08-27-开发自己的语言.md
@@ -329,7 +329,7 @@ my-quote
 
 ```
 (define (eval-sequence exps env)
-  (cond ((last-exp? exps) (eval (first-exp exps) env))
+  (cond ((last-exp? exps) (my-eval (first-exp exps) env))
         (else (my-eval (first-exp exps) env)
               (eval-sequence (rest-exps exps) env))))
 ```
@@ -431,9 +431,28 @@ my-quote
 ```scheme
 (define (make-procedure parameters body env)
    (list 'procedure parameters body env))
+(define (procedure-parameters p) (cadr p))
+(define (procedure-body p) (caddr p))
+(define (procedure-environment p) (cadddr p))
 ```
 
-可见一个函数有三个元素，参数列表，函数体，和环境。
+看看执行效果
+
+```
+> (make-procedure '(a b) 'a '())
+(procedure (a b) a ())
+> (set! p1 (make-procedure '(a b) 'a '()))
+> (procedure-parameters  p1)
+(a b)
+> (procedure-body  p1)
+a
+> (procedure-env  p1)
+> (procedure-environment  p1)
+()
+```
+
+可见一个函数有三个元素，参数列表，函数体，和环境。环境这个概念一直没有
+详细解释，再推到下面解释。
 
 那么，我们先实现一个 lambda 表达式的解析。
 
@@ -457,8 +476,7 @@ my-quote
   (list 'procedure parameters body env))
 ```
 
-
-
+看看执行效果
 
 ```
 > (lambda? '(my-lambda 1))
@@ -517,6 +535,9 @@ my-quote
 (define (lambda-body exp) (cddr exp))
 (define (make-procedure parameters body env)
   (list 'procedure parameters body env))
+(define (procedure-parameters p) (cadr p))
+(define (procedure-body p) (caddr p))
+(define (procedure-environment p) (cadddr p))
 
 (define (eval-sequence exps env)
   (cond ((last-exp? exps) (my-eval (first-exp exps) env))
@@ -539,13 +560,213 @@ my-quote
 ```
 
 
+### 函数调用与变量
+
+刚刚我们定义了一个函数，但是并没有什么用处，我们看看什么是函数调用 (apply)。
+
+```
+(<L> <A1> <A2> ... <An>)
+```
+
+看看怎么解析这个函数调用型的 `s-exp` 。
+
+ * 首先，`L` 是一个表达式，求值结果是一个函数
+ * 然后，`A1`  是一个表达式，求值结果是任意值
+ * 之后，依次求值 `A2` ... `An`
+ * 之后，绑定 (bind) `A1` ... `An` 的值，到 `L` 的环境中。
+ * 最后，对 `L` 的函数体求值。并返回结果
+
+这里需要有两个注意的事项
+
+ 1. 求值顺序
+ 2. 递归调用
+ 3. 变量绑定
+
+这是一门语言最核心的部分了。求值顺序。我似乎提到求值顺序很多次了。这个
+定义是大多数主流语言的设计。先对参数求值，再运行函数体。
+
+参数的求值顺序也很重要，有的语言为了性能，不定义参数的求值顺序。
+
+第二个问题就是阴阳大法的互递归调用。apply 不停地调用 eval 得到函数对象，
+和参数，绑定参数，然后调用 eval 求值函数体。而 apply 的处理，正式 eval
+函数中的重要组成部分。
+
+第三个问题就是变量的作用域的问题。变量的作用域也是一个重大的语言设计问
+题。不同的语言有不同的设计，展现了不同语言丰富的表达能力。现在主流语言
+是“词法作用域” (lexical scope) 。我们选择的是一个简单的词法作用域的实
+现。
+
+这里也需要注意参数的求值环境是在当前环境，而函数体的求值环境，是参数绑
+定之后的新环境。
+
+什么是求值环境？求值环境就是一个变量名称到变量值的映射关系。
+
+什么是闭包(closure) ? 闭包也是一个环境，就是在生成一个函数的时候，当时
+的环境。
+
+什么是帧 (frame) ? 就是函数调用的时候，绑定参数生成的环境。
+
+这就是说环境是一个动态的数状结构（递归结构）。在求值一个函数的函数体的
+时候，碰到变量求值，会递归搜索闭包，这样除了参数绑定产生的本地环境之外，
+还需要搜索闭包。
+
+我们先实现 frame 。
+
+```scheme
+(define (make-frame variables values)
+  (cons variables values))
+(define (frame-variables frame) (car frame))
+(define (frame-values frame) (cdr frame))
+```
+
+看看运行效果
+
+```
+> (set! f1 (make-frame '(a b c) '(1 2 3)))
+> (frame-variables f1)
+(a b c)
+> (frame-values f1)
+(1 2 3)
+```
+
+我们再实现 env 。
+
+```scheme
+(define (extend-environment vars vals base-env)
+  (if (= (length vars) (length vals))
+      (cons (make-frame vars vals) base-env)
+      (if (< (length vars) (length vals))
+          (error "Too many arguments supplied" vars vals)
+          (error "Too few arguments supplied" vars vals))))
+(define (enclosing-environment env) (cdr env))
+(define (first-frame env) (car env))
+(define the-empty-environment '())
+```
+
+看看执行效果
+
+```
+> (set! e1 (extend-environment '(a b c) '(1 2 3) the-empty-environment)))
+> e1
+(((a b c) 1 2 3))
+> (enclosing-environment e1)
+()
+> (set! e2 (extend-environment '(x y z) '(10 20 30) e1))
+> e2
+(((x y z) 10 20 30) ((a b c) 1 2 3))
+> (enclosing-environment e2)
+(((a b c) 1 2 3))
+```
+
+我们再实现一个变量查找的功能
+
+```scheme
+(define (lookup-variable-value var env)
+  (define (env-loop env)
+    (define (scan vars vals)
+      (cond ((null? vars)
+             (env-loop (enclosing-environment env)))
+            ((eq? var (car vars))
+             (car vals))
+            (else (scan (cdr vars) (cdr vals)))))
+    (if (eq? env the-empty-environment)
+        (error "Unbound variable" var)
+        (let ((frame (first-frame env)))
+          (scan (frame-variables frame)
+                (frame-values frame)))))
+  (env-loop env))
+```
+
+我们看看执行效果
+
+```
+> (lookup-variable-value 'x e2)
+10
+> (lookup-variable-value 'y e2)
+20
+> (lookup-variable-value 'a e1)
+1
+> (lookup-variable-value 'a e2)
+1
+> (lookup-variable-value 'u e2)
+Exception: Unbound variable with irritant u
+Type (debug) to enter the debugger.
+```
+
+有了这些，我们可以实现变量的求值了。
 
 
-一个变量用一个 symbol 来表示，也就是说，如果 `my-eval` 输入 `s-exp` 是
-一个 symbol 的时候，`my-eval` 怎么求值。
+```scheme
+(define (my-eval exp env)
+  (cond (.......
+        ((variable? exp) (lookup-variable-value exp env))
+        ......
+```
 
-变量的作用域也是一个重大的语言设计问题。不同的语言有不同的设计，展现了
-不同语言丰富的表达能力。现在主流语言是“词法作用域” (lexical scope) 。
-我们做出一个简单的词法作用域的实现。
+看看执行效果
 
-讲词法作用域的时候，不可避免的要说到函数的定义。
+```
+> (my-eval 'a e1)
+1
+> (my-eval 'b e1)
+2
+> (my-eval 'c e1)
+3
+> (my-eval 'a e2)
+1
+> (my-eval 'b e2)
+2
+> (my-eval 'c e2)
+3
+> (my-eval 'x e2)
+10
+> (my-eval 'y e2)
+20
+> (my-eval 'z e2)
+30
+```
+
+辅助函数的实现
+
+```scheme
+(define (variable? exp) (symbol? exp))
+```
+
+
+我们继续，有了这些，我们可以实现 apply 的解析了
+
+
+```scheme
+(define (my-eval exp env)
+  (cond (.......
+        ((application? exp)
+         (my-apply (my-eval (operator exp) env)
+                   (list-of-values (operands exp) env)))
+        ......
+```
+
+看看一些辅助函数的实现
+
+```scheme
+(define (application? exp) (pair? exp))
+(define (operator exp) (car exp))
+(define (operands exp) (cdr exp))
+(define (no-operands? ops) (null? ops))
+(define (first-operand ops) (car ops))
+(define (rest-operands ops) (cdr ops))
+(define (list-of-values exps env)
+  (if (no-operands? exps)
+      '()
+      (cons (eval (first-operand exps) env)
+            (list-of-values (rest-operands exps) env))))
+```
+
+看看执行效果
+
+```
+> (my-eval '((my-lambda (a b) a) 1 2) '())
+1
+> (my-eval '((my-lambda (a b) b) 1 2) '())
+2
+>
+```
