change my- to ''

--- a/_posts/2016-08-27-开发自己的语言.md
+++ b/_posts/2016-08-27-开发自己的语言.md
@@ -47,7 +47,7 @@ comments: true
 ```scheme
 (define true #t)
 (define false #f)
-(define (my-eval exp env)
+(define (eval exp env)
   (cond ((self-evaluating? exp) exp)
         (else (error "Unknown expression type -- EVAL" exp))))
 
@@ -66,13 +66,13 @@ Chez Scheme Version 9.4
 Copyright 1984-2016 Cisco Systems, Inc.
 
 > (load "eval0.scm")
-> (my-eval 1 '())
+> (eval 1 '())
 1
-> (my-eval 1.2 '())
+> (eval 1.2 '())
 1.2
-> (my-eval "abc" '())
+> (eval "abc" '())
 "abc"
-> (my-eval (list 1 2 3) '())
+> (eval (list 1 2 3) '())
 Exception in error: invalid message argument (1 2 3)
 Type (debug) to enter the debugger.
 ```
@@ -90,7 +90,7 @@ Type (debug) to enter the debugger.
 颗粒度足够细致，脑子里面已经有具体的迭代步骤了。这种模式下，开发效率高
 一些。
 
-可以看到，`(my-eval (list 1 2 3) '()` 的时候，出现错误。这里也有一个开
+可以看到，`(eval (list 1 2 3) '()` 的时候，出现错误。这里也有一个开
 发原则，“测试你的每一行代码”。可以看到，这几个简单的测试，覆盖了刚刚写
 的所有代码。
 
@@ -101,18 +101,18 @@ Type (debug) to enter the debugger.
 好了，我们继续迭代开发我们的解释器。
 
 
-### my-quote
+### quote
 
 这个规则也是一个终止条件。如果一个 `s-exp` 是一个 `list` ，第一个元素
-是 `my-quote`，第二个元素任何一个 `s-exp` X，那么求值结果就是 X 。
+是 `quote`，第二个元素任何一个 `s-exp` X，那么求值结果就是 X 。
 
 ```
-(my-quote 1) => 1
-(my-quote 1.2) => 1.2
-(my-quote "abc") => "abc
-(my-quote (1 2 3)) => (1 2 3)
-(my-quote a-symbol) => a-symbol
-(my-quote my-quote) => my-quote
+(quote 1) => 1
+(quote 1.2) => 1.2
+(quote "abc") => "abc
+(quote (1 2 3)) => (1 2 3)
+(quote a-symbol) => a-symbol
+(quote quote) => quote
 ```
 
 `s-exp` 中有一个重要的数据类型，就是 symbol 。 quote 可以得到 symbol
@@ -120,7 +120,7 @@ Type (debug) to enter the debugger.
 
 
 ```scheme
-(define (my-eval exp env)
+(define (eval exp env)
   (cond (......
         ((quoted? exp) (text-of-quotation exp))
          ......
@@ -131,7 +131,7 @@ Type (debug) to enter the debugger.
 
 ```scheme
 (define (quoted? exp)
-  (tagged-list? exp 'my-quote))
+  (tagged-list? exp 'quote))
 (define (text-of-quotation exp) (cadr exp))
 (define (tagged-list? exp tag)
   (if (pair? exp)
@@ -143,16 +143,16 @@ Type (debug) to enter the debugger.
 
 ```
 > (load "eval1.scm")
-> (my-eval '(my-quote 1) '())
+> (eval '(quote 1) '())
 1
-> (my-eval '(my-quote 1.2) '())
+> (eval '(quote 1.2) '())
 1.2
-> (my-eval '(my-quote "hello") '())
+> (eval '(quote "hello") '())
 "hello"
-> (my-eval '(my-quote a-symbol) '())
+> (eval '(quote a-symbol) '())
 a-symbol
-> (my-eval '(my-quote my-quote) '())
-my-quote
+> (eval '(quote quote) '())
+quote
 ```
 
 `eval1.scm` 的完整内容如下
@@ -160,7 +160,7 @@ my-quote
 ```scheme
 (define true #t)
 (define false #f)
-(define (my-eval exp env)
+(define (eval exp env)
   (cond ((self-evaluating? exp) exp)
         ((quoted? exp) (text-of-quotation exp))
         (else (error "Unknown expression type -- EVAL" exp))))
@@ -171,7 +171,7 @@ my-quote
         (else false)))
 
 (define (quoted? exp)
-  (tagged-list? exp 'my-quote))
+  (tagged-list? exp 'quote))
 (define (text-of-quotation exp) (cadr exp))
 (define (tagged-list? exp tag)
   (if (pair? exp)
@@ -186,15 +186,12 @@ my-quote
 的函数，`cadr` 是更加底层的函数。这种逻辑层次的划分，可以提高程序的可
 读性。
 
-因为 `eval` , `quote` , `if` , `cond` 等等，都是 scheme 自带的关键字，
-原 SICP 中直接使用的这些关键字，为了加以区别，我修改成了 `my-eval` ,
-`my-quote`, `my-if`, `my-cond` 等等。这种区分不是必须的。
 
-### my-if
+### if
 
 支持条件表达式，输入 `s-exp` 是一个 list ，有四个元素：
 
- 1. 第一个元素是 `my-if` ，表明是一个条件表达式。
+ 1. 第一个元素是 `if` ，表明是一个条件表达式。
  2. 第二个元素是判断条件 `<C>`
  3. 第三个元素是 `<T>` 为真的时候，`s-exp` 的求值结果。
  4. 第三个元素是 `<F>` 为假的时候，`s-exp` 的求值结果。
@@ -207,7 +204,7 @@ my-quote
 
 
 ```scheme
-(define (my-eval exp env)
+(define (eval exp env)
   (cond (......
         ((if? exp) (eval-if exp env))
          ......
@@ -217,7 +214,7 @@ my-quote
 先看看 `if?` 的实现。
 
 ```scheme
-(define (if? exp) (tagged-list? exp 'my-if))
+(define (if? exp) (tagged-list? exp 'if))
 ```
 
 感谢逻辑分层的代码风格，`if?` 的实现的可读性就很好了。
@@ -227,13 +224,13 @@ my-quote
 ```scheme
 (define (eval-if exp env)
   (if (true? (eval (if-predicate exp) env))
-      (my-eval (if-consequent exp) env)
-      (my-eval (if-alternative exp) env)))
+      (eval (if-consequent exp) env)
+      (eval (if-alternative exp) env)))
 ```
 
 这里有两点需要注意
 
- 1. 递归调用， `eval-if` 递归调用了 `my-eval` ，可以看到递归调用的强大之处。
+ 1. 递归调用， `eval-if` 递归调用了 `eval` ，可以看到递归调用的强大之处。
  2. 求值顺序。
 
 “求值顺序” 是一门语言的一个重大的设计问题。不同的求值顺序，导致完全不同
@@ -260,9 +257,9 @@ my-quote
 
 
 ```
-> (my-eval '(my-if (my-quote true) 1 2) '())
+> (eval '(if (quote true) 1 2) '())
 1
-> (my-eval '(my-if (my-quote false) 1 2) '())
+> (eval '(if (quote false) 1 2) '())
 2
 ```
 
@@ -271,7 +268,7 @@ my-quote
 ```scheme
 (define true #t)
 (define false #f)
-(define (my-eval exp env)
+(define (eval exp env)
   (cond ((self-evaluating? exp) exp)
         ((quoted? exp) (text-of-quotation exp))
         ((if? exp) (eval-if exp env))
@@ -281,12 +278,12 @@ my-quote
   (cond ((number? exp) true)
         ((string? exp) true)
         (else false)))
-(define (if? exp) (tagged-list? exp 'my-if))
+(define (if? exp) (tagged-list? exp 'if))
 
 (define (eval-if exp env)
-  (if (true? (my-eval (if-predicate exp) env))
-      (my-eval (if-consequent exp) env)
-      (my-eval (if-alternative exp) env)))
+  (if (true? (eval (if-predicate exp) env))
+      (eval (if-consequent exp) env)
+      (eval (if-alternative exp) env)))
 
 (define (if-predicate exp) (cadr exp))
 (define (if-consequent exp) (caddr exp))
@@ -298,7 +295,7 @@ my-quote
   (eq? exp 'true))
 
 (define (quoted? exp)
-  (tagged-list? exp 'my-quote))
+  (tagged-list? exp 'quote))
 (define (text-of-quotation exp) (cadr exp))
 (define (tagged-list? exp tag)
   (if (pair? exp)
@@ -312,13 +309,13 @@ my-quote
 这个功能是一个很方便的功能。如果 `<s-exp>` 是下面的形式
 
 ```
-(my-begin <E1> <E2> .... <En>)
+(begin <E1> <E2> .... <En>)
 ```
 
 那么我们对 E1 , E2 ，.... , En 分别求值，整个表达式的值就是 En 的求值结果。
 
 ```
-(define (my-eval exp env)
+(define (eval exp env)
   (cond (.......
         ((begin? exp)
          (eval-sequence (begin-actions exp) env))
@@ -329,20 +326,20 @@ my-quote
 
 ```
 (define (eval-sequence exps env)
-  (cond ((last-exp? exps) (my-eval (first-exp exps) env))
-        (else (my-eval (first-exp exps) env)
+  (cond ((last-exp? exps) (eval (first-exp exps) env))
+        (else (eval (first-exp exps) env)
               (eval-sequence (rest-exps exps) env))))
 ```
 
 这里注意
  1. 求值顺序
- 2. 递归调用 `my-eval`
+ 2. 递归调用 `eval`
  3. 中间的表达式的求值结果被丢弃了
 
 看看其他几个辅助函数的实现
 
 ```
-(define (begin? exp) (tagged-list? exp 'my-begin))
+(define (begin? exp) (tagged-list? exp 'begin))
 (define (begin-actions exp) (cdr exp))
 (define (last-exp? seq) (null? (cdr seq)))
 (define (first-exp seq) (car seq))
@@ -353,7 +350,7 @@ my-quote
 
 ```
 > (load "eval3.scm")
-> (my-eval '(my-begin 1 2) '())
+> (eval '(begin 1 2) '())
 ```
 
 下面是完整的程序代码
@@ -361,7 +358,7 @@ my-quote
 ```scheme
 (define true #t)
 (define false #f)
-(define (my-eval exp env)
+(define (eval exp env)
   (cond ((self-evaluating? exp) exp)
         ((quoted? exp) (text-of-quotation exp))
         ((if? exp) (eval-if exp env))
@@ -373,12 +370,12 @@ my-quote
   (cond ((number? exp) true)
         ((string? exp) true)
         (else false)))
-(define (if? exp) (tagged-list? exp 'my-if))
+(define (if? exp) (tagged-list? exp 'if))
 
 (define (eval-if exp env)
-  (if (true? (my-eval (if-predicate exp) env))
-      (my-eval (if-consequent exp) env)
-      (my-eval (if-alternative exp) env)))
+  (if (true? (eval (if-predicate exp) env))
+      (eval (if-consequent exp) env)
+      (eval (if-alternative exp) env)))
 
 (define (if-predicate exp) (cadr exp))
 (define (if-consequent exp) (caddr exp))
@@ -390,18 +387,18 @@ my-quote
   (eq? exp 'true))
 
 (define (eval-sequence exps env)
-  (cond ((last-exp? exps) (my-eval (first-exp exps) env))
-        (else (my-eval (first-exp exps) env)
+  (cond ((last-exp? exps) (eval (first-exp exps) env))
+        (else (eval (first-exp exps) env)
               (eval-sequence (rest-exps exps) env))))
 
-(define (begin? exp) (tagged-list? exp 'my-begin))
+(define (begin? exp) (tagged-list? exp 'begin))
 (define (begin-actions exp) (cdr exp))
 (define (last-exp? seq) (null? (cdr seq)))
 (define (first-exp seq) (car seq))
 (define (rest-exps seq) (cdr seq))
 
 (define (quoted? exp)
-  (tagged-list? exp 'my-quote))
+  (tagged-list? exp 'quote))
 (define (text-of-quotation exp) (cadr exp))
 (define (tagged-list? exp tag)
   (if (pair? exp)
@@ -414,7 +411,7 @@ my-quote
 什么是函数表达式，其实就是著名的 lambda 表达式。lambda 表达式格式如下
 
 ```
-(my-lambda <PARAM-LIST> <FUN-BODY>)
+(lambda <PARAM-LIST> <FUN-BODY>)
 ```
 
 `PARAM-LIST` 是一个变量列表，引入变量的作用域，也叫环境。我们在求值
@@ -457,7 +454,7 @@ a
 那么，我们先实现一个 lambda 表达式的解析。
 
 ```scheme
-(define (my-eval exp env)
+(define (eval exp env)
   (cond (.......
         ((lambda? exp)
          (make-procedure (lambda-parameters exp)
@@ -469,7 +466,7 @@ a
 其他几个辅助函数的实现
 
 ```scheme
-(define (lambda? exp) (tagged-list? exp 'my-lambda))
+(define (lambda? exp) (tagged-list? exp 'lambda))
 (define (lambda-parameters exp) (cadr exp))
 (define (lambda-body exp) (cddr exp))
 (define (make-procedure parameters body env)
@@ -479,15 +476,15 @@ a
 看看执行效果
 
 ```
-> (lambda? '(my-lambda 1))
+> (lambda? '(lambda 1))
 #f
-> (lambda-parameters '(my-lambda (a b) (+ a b)))
+> (lambda-parameters '(lambda (a b) (+ a b)))
 (a b)
-> (lambda-body '(my-lambda (a b) (+ a b)))
+> (lambda-body '(lambda (a b) (+ a b)))
 ((+ a b))
 > (make-procedure '(a b) '((+ a b)) '())
 (procedure (a b) ((+ a b)) ())
-> (my-eval '(my-lambda (a b) (+ a b)) '())
+> (eval '(lambda (a b) (+ a b)) '())
 (procedure (a b) ((+ a b)) ())
 ```
 
@@ -498,7 +495,7 @@ a
 ```scheme
 (define true #t)
 (define false #f)
-(define (my-eval exp env)
+(define (eval exp env)
   (cond ((self-evaluating? exp) exp)
         ((quoted? exp) (text-of-quotation exp))
         ((if? exp) (eval-if exp env))
@@ -514,12 +511,12 @@ a
   (cond ((number? exp) true)
         ((string? exp) true)
         (else false)))
-(define (if? exp) (tagged-list? exp 'my-if))
+(define (if? exp) (tagged-list? exp 'if))
 
 (define (eval-if exp env)
-  (if (true? (my-eval (if-predicate exp) env))
-      (my-eval (if-consequent exp) env)
-      (my-eval (if-alternative exp) env)))
+  (if (true? (eval (if-predicate exp) env))
+      (eval (if-consequent exp) env)
+      (eval (if-alternative exp) env)))
 
 (define (if-predicate exp) (cadr exp))
 (define (if-consequent exp) (caddr exp))
@@ -530,7 +527,7 @@ a
 (define (true? exp)
   (eq? exp 'true))
 
-(define (lambda? exp) (tagged-list? exp 'my-lambda))
+(define (lambda? exp) (tagged-list? exp 'lambda))
 (define (lambda-parameters exp) (cadr exp))
 (define (lambda-body exp) (cddr exp))
 (define (make-procedure parameters body env)
@@ -540,18 +537,18 @@ a
 (define (procedure-environment p) (cadddr p))
 
 (define (eval-sequence exps env)
-  (cond ((last-exp? exps) (my-eval (first-exp exps) env))
-        (else (my-eval (first-exp exps) env)
+  (cond ((last-exp? exps) (eval (first-exp exps) env))
+        (else (eval (first-exp exps) env)
               (eval-sequence (rest-exps exps) env))))
 
-(define (begin? exp) (tagged-list? exp 'my-begin))
+(define (begin? exp) (tagged-list? exp 'begin))
 (define (begin-actions exp) (cdr exp))
 (define (last-exp? seq) (null? (cdr seq)))
 (define (first-exp seq) (car seq))
 (define (rest-exps seq) (cdr seq))
 
 (define (quoted? exp)
-  (tagged-list? exp 'my-quote))
+  (tagged-list? exp 'quote))
 (define (text-of-quotation exp) (cadr exp))
 (define (tagged-list? exp tag)
   (if (pair? exp)
@@ -697,7 +694,7 @@ Type (debug) to enter the debugger.
 
 
 ```scheme
-(define (my-eval exp env)
+(define (eval exp env)
   (cond (.......
         ((variable? exp) (lookup-variable-value exp env))
         ......
@@ -706,23 +703,23 @@ Type (debug) to enter the debugger.
 看看执行效果
 
 ```
-> (my-eval 'a e1)
+> (eval 'a e1)
 1
-> (my-eval 'b e1)
+> (eval 'b e1)
 2
-> (my-eval 'c e1)
+> (eval 'c e1)
 3
-> (my-eval 'a e2)
+> (eval 'a e2)
 1
-> (my-eval 'b e2)
+> (eval 'b e2)
 2
-> (my-eval 'c e2)
+> (eval 'c e2)
 3
-> (my-eval 'x e2)
+> (eval 'x e2)
 10
-> (my-eval 'y e2)
+> (eval 'y e2)
 20
-> (my-eval 'z e2)
+> (eval 'z e2)
 30
 ```
 
@@ -737,10 +734,10 @@ Type (debug) to enter the debugger.
 
 
 ```scheme
-(define (my-eval exp env)
+(define (eval exp env)
   (cond (.......
         ((application? exp)
-         (my-apply (my-eval (operator exp) env)
+         (apply (eval (operator exp) env)
                    (list-of-values (operands exp) env)))
         ......
 ```
@@ -764,19 +761,19 @@ Type (debug) to enter the debugger.
 看看执行效果
 
 ```
-> (my-eval '((my-lambda (a b) a) 1 2) '())
+> (eval '((lambda (a b) a) 1 2) '())
 1
-> (my-eval '((my-lambda (a b) b) 1 2) '())
+> (eval '((lambda (a b) b) 1 2) '())
 2
 >
 ```
 
 下面是完整的代码
 
-```
+```scheme
 (define true #t)
 (define false #f)
-(define (my-eval exp env)
+(define (eval exp env)
   (cond ((self-evaluating? exp) exp)
         ((quoted? exp) (text-of-quotation exp))
         ((if? exp) (eval-if exp env))
@@ -788,7 +785,7 @@ Type (debug) to enter the debugger.
                          env))
         ((variable? exp) (lookup-variable-value exp env))
         ((application? exp)
-         (my-apply (my-eval (operator exp) env)
+         (apply (eval (operator exp) env)
                    (list-of-values (operands exp) env)))
         (else (error #f "Unknown expression type -- EVAL" exp))))
 
@@ -796,12 +793,12 @@ Type (debug) to enter the debugger.
   (cond ((number? exp) true)
         ((string? exp) true)
         (else false)))
-(define (if? exp) (tagged-list? exp 'my-if))
+(define (if? exp) (tagged-list? exp 'if))
 
 (define (eval-if exp env)
-  (if (true? (my-eval (if-predicate exp) env))
-      (my-eval (if-consequent exp) env)
-      (my-eval (if-alternative exp) env)))
+  (if (true? (eval (if-predicate exp) env))
+      (eval (if-consequent exp) env)
+      (eval (if-alternative exp) env)))
 
 (define (if-predicate exp) (cadr exp))
 (define (if-consequent exp) (caddr exp))
@@ -812,7 +809,7 @@ Type (debug) to enter the debugger.
 (define (true? exp)
   (eq? exp 'true))
 
-(define (lambda? exp) (tagged-list? exp 'my-lambda))
+(define (lambda? exp) (tagged-list? exp 'lambda))
 (define (lambda-parameters exp) (cadr exp))
 (define (lambda-body exp) (cddr exp))
 (define (make-procedure parameters body env)
@@ -822,7 +819,7 @@ Type (debug) to enter the debugger.
 (define (procedure-environment p) (cadddr p))
 
 
-(define (my-apply procedure arguments)
+(define (apply procedure arguments)
   (eval-sequence
    (procedure-body procedure)
    (extend-environment
@@ -876,22 +873,22 @@ Type (debug) to enter the debugger.
 (define (list-of-values exps env)
   (if (no-operands? exps)
       '()
-      (cons (my-eval (first-operand exps) env)
+      (cons (eval (first-operand exps) env)
             (list-of-values (rest-operands exps) env))))
 
 (define (eval-sequence exps env)
-  (cond ((last-exp? exps) (my-eval (first-exp exps) env))
-        (else (my-eval (first-exp exps) env)
+  (cond ((last-exp? exps) (eval (first-exp exps) env))
+        (else (eval (first-exp exps) env)
               (eval-sequence (rest-exps exps) env))))
 
-(define (begin? exp) (tagged-list? exp 'my-begin))
+(define (begin? exp) (tagged-list? exp 'begin))
 (define (begin-actions exp) (cdr exp))
 (define (last-exp? seq) (null? (cdr seq)))
 (define (first-exp seq) (car seq))
 (define (rest-exps seq) (cdr seq))
 
 (define (quoted? exp)
-  (tagged-list? exp 'my-quote))
+  (tagged-list? exp 'quote))
 (define (text-of-quotation exp) (cadr exp))
 (define (tagged-list? exp tag)
   (if (pair? exp)
@@ -899,3 +896,5 @@ Type (debug) to enter the debugger.
       false))
 
 ```
+
+###
