--- a/_posts/2016-08-27-开发自己的语言.md
+++ b/_posts/2016-08-27-开发自己的语言.md
@@ -1,12 +1,22 @@
 ---
 layout: post
-title:  "开发自己的语言"
-date:   2016/08/27 16:13:26
-categories:
+title: 开发自己的语言
+date: '2016/08/27 16:13:26'
+categories: null
 comments: true
 ---
 
 
+<!-- toc -->
+
+- [原始类型](#原始类型)
+- [quote](#quote)
+- [if](#if)
+- [代码块求值](#代码块求值)
+- [函数的求值](#函数的求值)
+- [函数调用与变量](#函数调用与变量)
+
+<!-- tocstop -->
 
 本文大多数参考 [SICP][]
 
@@ -27,9 +37,8 @@ comments: true
 
 这个解释器的核心就是 `apply` 和 `eval` 之间的互递归调用。
 
-## 什么是 `s-exp` 和 `s-exp` 的求值规则
 
-### 原始类型
+## 原始类型
 
 原始类型是一个 `s-exp` ，求值就是 `s-exp` 本身。包括：整数，浮点数，字符串。例如
 
@@ -101,7 +110,7 @@ Type (debug) to enter the debugger.
 好了，我们继续迭代开发我们的解释器。
 
 
-### quote
+## quote
 
 这个规则也是一个终止条件。如果一个 `s-exp` 是一个 `list` ，第一个元素
 是 `quote`，第二个元素任何一个 `s-exp` X，那么求值结果就是 X 。
@@ -187,7 +196,7 @@ quote
 读性。
 
 
-### if
+## if
 
 支持条件表达式，输入 `s-exp` 是一个 list ，有四个元素：
 
@@ -304,7 +313,7 @@ quote
 
 ```
 
-### 代码块求值
+## 代码块求值
 
 这个功能是一个很方便的功能。如果 `<s-exp>` 是下面的形式
 
@@ -406,7 +415,7 @@ quote
       false))
 ```
 
-### 函数的求值
+## 函数的求值
 
 什么是函数表达式，其实就是著名的 lambda 表达式。lambda 表达式格式如下
 
@@ -557,7 +566,7 @@ a
 ```
 
 
-### 函数调用与变量
+## 函数调用与变量
 
 刚刚我们定义了一个函数，但是并没有什么用处，我们看看什么是函数调用 (apply)。
 
@@ -897,4 +906,278 @@ Type (debug) to enter the debugger.
 
 ```
 
-###
+## 内置函数
+
+我们有了语言的核心，但是这个语言还没什么用，因为连基本的加减乘除都做不
+了。我们利用宿主语言提供的功能，实现一些基本的内置函数。
+
+首先我们要区分内置函数和语言自己的函数。我们用 `primitive` 来标记内置函数。
+
+```scheme
+(define (primitive-procedure? proc)
+  (tagged-list? proc 'primitive))
+```
+
+primitive 函数有一个属性，就是底层的函数实现。
+
+```scheme
+(define (primitive-implementation proc) (cadr proc))
+```
+
+我们预先定义下面这些内置函数
+
+```
+(define primitive-procedures
+  (list (list 'car car)
+        (list 'cdr cdr)
+        (list 'cons cons)
+        (list 'null? null?)
+...
+        ))
+```
+
+我们初始化语言的初始环境
+
+```
+(define (primitive-procedure-names)
+  (map car
+       primitive-procedures))
+
+(define (primitive-procedure-objects)
+  (map (lambda (proc) (list 'primitive (cadr proc)))
+  primitive-procedures))
+(define (setup-environment)
+  (let ((initial-env
+         (extend-environment (primitive-procedure-names)
+                             (primitive-procedure-objects)
+                             the-empty-environment)))
+    initial-env))
+(define the-global-environment (setup-environment))
+````
+
+看看执行效果
+
+
+```
+> (load "eval6.scm")
+> the-global-environment
+(((car cdr cons null?)
+   (primitive #<procedure car>)
+   (primitive #<procedure cdr>)
+   (primitive #<procedure cons>)
+   (primitive #<procedure null?>)))
+```
+
+对应的 `apply` 函数需要修改，这样才能调用内置函数。
+
+```scheme
+(define (apply procedure arguments)
+  (cond ((primitive-procedure? procedure)
+         (apply-primitive-procedure procedure arguments))
+        ((compound-procedure? procedure)
+         (eval-sequence
+           (procedure-body procedure)
+           (extend-environment
+             (procedure-parameters procedure)
+             arguments
+             (procedure-environment procedure))))
+        (else
+         (error
+          "Unknown procedure type -- APPLY" procedure))))
+```
+
+看看其他几个辅助函数的实现
+
+```scheme
+(define (compound-procedure? p) (tagged-list? p 'procedure))
+(define (apply-primitive-procedure proc args)
+  (apply-in-underlying-scheme
+   (primitive-implementation proc) args))
+(define apply-in-underlying-scheme apply)
+```
+
+看看执行效果
+
+```
+> (eval 'car the-global-environment)
+(primitive #<procedure car>)
+> (apply-primitive-procedure (eval 'car the-global-environment) '((1 2)))
+1
+> (eval '(car '(1 2)) the-global-environment)
+1
+> (eval '(display "hello world") the-global-environment)
+hello world
+>
+```
+
+这里有一个坑，`apply` 已经在宿主语言中有定义了，所有我们要换一个名字，
+防止名字冲突。并且用 `apply-primitive-procedure` 强调我们调用的是宿主
+语言的 apply 函数。
+
+```
+(define apply-in-underlying-scheme (top-level-value 'apply (scheme-environment)))
+```
+
+我们的语言居然可以输出 "hello world" 了。下面是完整的代码。
+
+```scheme
+(define apply-in-underlying-scheme (top-level-value 'apply (scheme-environment)))
+(define true #t)
+(define false #f)
+(define (eval exp env)
+  (cond ((self-evaluating? exp) exp)
+        ((quoted? exp) (text-of-quotation exp))
+        ((if? exp) (eval-if exp env))
+        ((begin? exp)
+         (eval-sequence (begin-actions exp) env))
+        ((lambda? exp)
+         (make-procedure (lambda-parameters exp)
+                         (lambda-body exp)
+                         env))
+        ((variable? exp) (lookup-variable-value exp env))
+        ((application? exp)
+         (apply (eval (operator exp) env)
+                   (list-of-values (operands exp) env)))
+        (else (error #f "Unknown expression type -- EVAL" exp))))
+
+(define (self-evaluating? exp)
+  (cond ((number? exp) true)
+        ((string? exp) true)
+        (else false)))
+(define (if? exp) (tagged-list? exp 'if))
+
+(define (eval-if exp env)
+  (if (true? (eval (if-predicate exp) env))
+      (eval (if-consequent exp) env)
+      (eval (if-alternative exp) env)))
+
+(define (if-predicate exp) (cadr exp))
+(define (if-consequent exp) (caddr exp))
+(define (if-alternative exp)
+  (if (not (null? (cdddr exp)))
+      (cadddr exp)
+      'false))
+(define (true? exp)
+  (eq? exp 'true))
+
+(define (lambda? exp) (tagged-list? exp 'lambda))
+(define (lambda-parameters exp) (cadr exp))
+(define (lambda-body exp) (cddr exp))
+(define (make-procedure parameters body env)
+  (list 'procedure parameters body env))
+(define (compound-procedure? p) (tagged-list? p 'procedure))
+(define (procedure-parameters p) (cadr p))
+(define (procedure-body p) (caddr p))
+(define (procedure-environment p) (cadddr p))
+
+(define (apply procedure arguments)
+  (cond ((primitive-procedure? procedure)
+         (apply-primitive-procedure procedure arguments))
+        ((compound-procedure? procedure)
+         (eval-sequence
+           (procedure-body procedure)
+           (extend-environment
+             (procedure-parameters procedure)
+             arguments
+             (procedure-environment procedure))))
+        (else
+         (error
+          "Unknown procedure type -- APPLY" procedure))))
+
+(define (extend-environment vars vals base-env)
+  (if (= (length vars) (length vals))
+      (cons (make-frame vars vals) base-env)
+      (if (< (length vars) (length vals))
+          (error "Too many arguments supplied" vars vals)
+          (error "Too few arguments supplied" vars vals))))
+
+(define (make-frame variables values)
+  (cons variables values))
+(define (frame-variables frame) (car frame))
+(define (frame-values frame) (cdr frame))
+
+(define (extend-environment vars vals base-env)
+  (if (= (length vars) (length vals))
+      (cons (make-frame vars vals) base-env)
+      (if (< (length vars) (length vals))
+          (error "Too many arguments supplied" vars vals)
+          (error "Too few arguments supplied" vars vals))))
+(define (enclosing-environment env) (cdr env))
+(define (first-frame env) (car env))
+(define the-empty-environment '())
+(define (lookup-variable-value var env)
+  (define (env-loop env)
+    (define (scan vars vals)
+      (cond ((null? vars)
+             (env-loop (enclosing-environment env)))
+            ((eq? var (car vars))
+             (car vals))
+            (else (scan (cdr vars) (cdr vals)))))
+    (if (eq? env the-empty-environment)
+        (error #f "Unbound variable" var)
+        (let ((frame (first-frame env)))
+          (scan (frame-variables frame)
+                (frame-values frame)))))
+  (env-loop env))
+(define (primitive-procedure? proc)
+  (tagged-list? proc 'primitive))
+(define primitive-procedures
+  (list (list 'car car)
+        (list 'cdr cdr)
+        (list 'cons cons)
+        (list 'null? null?)
+        (list 'display display)
+        ))
+(define (primitive-implementation proc) (cadr proc))
+(define (primitive-procedure-names)
+  (map car
+       primitive-procedures))
+(define (apply-primitive-procedure proc args)
+  (apply-in-underlying-scheme
+   (primitive-implementation proc) args))
+
+
+(define (primitive-procedure-objects)
+  (map (lambda (proc) (list 'primitive (cadr proc)))
+       primitive-procedures))
+(define (setup-environment)
+  (let ((initial-env
+         (extend-environment (primitive-procedure-names)
+                             (primitive-procedure-objects)
+                             the-empty-environment)))
+    initial-env))
+(define the-global-environment (setup-environment))
+
+(define (variable? exp) (symbol? exp))
+(define (application? exp) (pair? exp))
+(define (operator exp) (car exp))
+(define (operands exp) (cdr exp))
+(define (no-operands? ops) (null? ops))
+(define (first-operand ops) (car ops))
+(define (rest-operands ops) (cdr ops))
+(define (list-of-values exps env)
+  (if (no-operands? exps)
+      '()
+      (cons (eval (first-operand exps) env)
+            (list-of-values (rest-operands exps) env))))
+
+(define (eval-sequence exps env)
+  (cond ((last-exp? exps) (eval (first-exp exps) env))
+        (else (eval (first-exp exps) env)
+              (eval-sequence (rest-exps exps) env))))
+
+(define (begin? exp) (tagged-list? exp 'begin))
+(define (begin-actions exp) (cdr exp))
+(define (last-exp? seq) (null? (cdr seq)))
+(define (first-exp seq) (car seq))
+(define (rest-exps seq) (cdr seq))
+
+(define (quoted? exp)
+  (tagged-list? exp 'quote))
+(define (text-of-quotation exp) (cadr exp))
+(define (tagged-list? exp tag)
+  (if (pair? exp)
+      (eq? (car exp) tag)
+      false))
+
+```
