--- a/_posts/2016-08-27-开发自己的语言.md
+++ b/_posts/2016-08-27-开发自己的语言.md
@@ -15,6 +15,8 @@ comments: true
 - [代码块求值](#代码块求值)
 - [函数的求值](#函数的求值)
 - [函数调用与变量](#函数调用与变量)
+- [内置函数](#内置函数)
+- [定义变量(define) 和变量赋值(set!)，还有 cond](#定义变量define-和变量赋值set，还有-cond)
 
 <!-- tocstop -->
 
@@ -1450,3 +1452,5 @@ hello world
       (eq? (car exp) tag)
       false))
 ```
+
+
