--- a/_posts/2016-08-27-开发自己的语言.md
+++ b/_posts/2016-08-27-开发自己的语言.md
@@ -590,8 +590,8 @@ a
  2. 递归调用
  3. 变量绑定
 
-这是一门语言最核心的部分了。求值顺序。我似乎提到求值顺序很多次了。这个
-定义是大多数主流语言的设计。先对参数求值，再运行函数体。
+这是一门语言最核心的部分了。求值顺序。我似乎提到求值顺序很多次了。这里
+选择了大多数主流语言的设计。
 
 参数的求值顺序也很重要，有的语言为了性能，不定义参数的求值顺序。
 
@@ -1452,5 +1452,3 @@ hello world
       (eq? (car exp) tag)
       false))
 ```
-
-
