--- a/_posts/2016-08-27-开发自己的语言.md
+++ b/_posts/2016-08-27-开发自己的语言.md
@@ -1452,3 +1452,31 @@ hello world
       (eq? (car exp) tag)
       false))
 ```
+
+## 其他
+
+这个解释器，看起来简单，其实已经支持了大多数核心功能了，甚至包括闭包的
+实现。一门语言还有其他一些重要的特性需要仔细设计。
+
+* 模块系统
+* 内存管理 gc
+* 代码生成优化
+* 调试器
+* 调优器
+* 特色功能
+    * 是否支持 continuation
+    * 是否支持 coroutine
+    * 是否支持 thread
+    * 是否支持 macro
+    * 是否支持 类型推导
+    * 是否支持 OO
+    * 是否支持 泛型
+    * 是否支持 generator/iterator
+* 标准库设计
+    * Network/File IO
+    * 基础数据类型库
+        * List
+        * Array
+        * Map
+        * Hash
+        * Set
