ok 增加链表反转的程序

--- a/_posts/2017-01-07-编写单链表反转的程序.md
+++ b/_posts/2017-01-07-编写单链表反转的程序.md
@@ -79,3 +79,109 @@ after reverse:(1,2,3)
 before reverse:()
 after reverse:()
 ```
+
+这个程序的风格是 imperative 的，如果使用函数式编程，我们得换一个语言 Java 。
+
+```java
+    public static class List<T> {
+        private final T value;
+        private final List next;
+
+        public List(T value, List next) {
+            this.value = value;
+            this.next = next;
+        }
+
+        @Override
+        public String toString() {
+            int n = 0;
+            StringBuilder sb = new StringBuilder();
+            sb.append("(");
+            for(List i = this; i!=null; i = i.next, n ++){
+                if(n!=0) {
+                    sb.append(",");
+                }
+                sb.append(i.value);
+            }
+            sb.append(")");
+            return sb.toString();
+        }
+    }
+
+```
+
+构造函数
+
+```java
+    public static <T> List<T> cons(T value, List<T> next) {
+        return new List(value, next);
+    }
+```
+
+著名的 foldl 函数，一切一次遍历循环的抽象。
+
+```java
+    public static <T,R> R foldl(BiFunction<T,R,R> f, R init, List<T> l){
+        R result = init;
+        for(List<T> i = l; i!=null; i = i.next){
+            result = f.apply(i.value, result);
+        }
+        return result;
+    }
+```
+
+反转列表的函数
+
+```java
+    static <T> List<T> reverse(List<T> l) {
+        return foldl(ListTest::cons, null, l);
+    }
+```
+
+测试代码
+```
+    @Test
+    public void main() throws Exception {
+        List a = new List(1, null);
+        a = new List(2, a);
+        a = new List(3, a);
+
+        System.out.println("before reverse: " + a);
+
+        List b = reverse(a);
+        System.out.println("after reverse: " + b);
+    }
+```
+
+输出结果
+
+```
+before reverse: (3,2,1)
+after reverse: (1,2,3)
+```
+
+在函数式编程中，`reverse-foldl` 是一个俗语。例如 `map` 可以写成下面的形式。
+
+```java
+    static <T,R> List<R> map(Function<T,R> f, List<T> l) {
+        return reverse(foldl((r,n) -> cons(f.apply(r),n), null,l));
+    }
+```
+
+测试代码
+
+```java
+    @Test
+    public void main2() throws Exception {
+        List<Integer> a = new List(1, null);
+        a = new List(2, a);
+        a = new List(3, a);
+        System.out.println("map: " + map(v-> v + 100, a));
+    }
+```
+
+输出结果
+
+```
+map: (103,102,101)
+```
