--- a/_posts/2017-01-07-编写单链表反转的程序.md
+++ b/_posts/2017-01-07-编写单链表反转的程序.md
@@ -139,7 +139,8 @@ after reverse:()
 ```
 
 测试代码
-```
+
+```java
     @Test
     public void main() throws Exception {
         List a = new List(1, null);
