--- a/_posts/2017-01-07-编写单链表反转的程序.md
+++ b/_posts/2017-01-07-编写单链表反转的程序.md
@@ -138,6 +138,8 @@ after reverse:()
     }
 ```
 
+
+
 测试代码
 
 ```java
@@ -159,6 +161,15 @@ after reverse:()
 ```
 before reverse: (3,2,1)
 after reverse: (1,2,3)
+```
+
+`foldl` 可以抽象很多一次遍历的循环，例如，`max` 可以如下
+
+```java
+    static <T extends Comparable<? super T>> T max(List<T> l){
+        if(l == null) return null;
+        return foldl((r1,r2) -> Comparator.<T>naturalOrder().compare(r1,r2) > 0?r1:r2,l.value, l);
+    }
 ```
 
 在函数式编程中，`reverse-foldl` 是一个俗语。例如 `map` 可以写成下面的形式。
