--- a/_posts/2017-01-07-编写单链表反转的程序.md
+++ b/_posts/2017-01-07-编写单链表反转的程序.md
@@ -119,6 +119,18 @@ after reverse:()
 ```
 
 著名的 foldl 函数，一切一次遍历循环的抽象。
+```java
+    public static <T,R> R foldl(BiFunction<T,R,R> f, R r, List<T> l){
+        if(l == null){
+            return r;
+        }else{
+            return foldl(f, f.apply(l.value, r), (List<T>)l.next);
+        }
+    }
+```
+
+可惜 java 不支持 TCO (Tail Call Optimization) ，这种写法会爆栈的。于是，用命令式的编程风格再写一次。
+
 
 ```java
     public static <T,R> R foldl(BiFunction<T,R,R> f, R init, List<T> l){
