--- a/_posts/2017-01-07-编写单链表反转的程序.md
+++ b/_posts/2017-01-07-编写单链表反转的程序.md
@@ -85,7 +85,7 @@ after reverse:()
 ```java
     public static class List<T> {
         private final T value;
-        private final List next;
+        private final List<T> next;
 
         public List(T value, List next) {
             this.value = value;
