--- a/_posts/2017-01-08-二分法查找.md
+++ b/_posts/2017-01-08-二分法查找.md
@@ -68,7 +68,7 @@ found 19 at a[4]
 1. 数组的长度是 `len`
 2. 数组最后一个元素是 `a[len-1]`
 3. `len == 0` 数组为空。
-4. 数组下标 `a[mid]`，那么 `a[mid]` 之前有 `mid` 个元素。
+4. 数组下标 `a[mid]`，那么 `a[mid]` 之前有 `mid` 个元素。不包含 `a[mid]`。
 5. 数组下标 `a[mid]`，那么 `a[mid]` 后面一个元素的是 `a[mid+1]`
 6. 数组下标 `a[mid]`，那么从 `a[mid]` 到数组结尾，一共有 `len-mid` 个元素。包含 `a[mid]` 。
 7. 特别的，当 mid = 0 的时候，从 `a[0]` 到数组结尾，一共有 `len` 个元素。包含 `a[0]`。
