--- a/_posts/2017-01-08-二分法查找.md
+++ b/_posts/2017-01-08-二分法查找.md
@@ -167,4 +167,4 @@ goto TAIL_CALL;
 1. if 尽量带 else
 2. if elseif else 风格的代码，最好覆盖所有的可能性。
 
-讨论详见 http://wcy123.github.io/2015/07/08/C-C-if-else/
+讨论详见 [](http://wcy123.github.io/2015/07/08/C-C-if-else/)
