--- a/_posts/2017-01-14-Java---函数式编程实战.md
+++ b/_posts/2017-01-14-Java---函数式编程实战.md
@@ -109,12 +109,15 @@ final Function<Map.Entry<String, List<LogEntry>>, LogEntry> mergeLoginEntry
 对应的登陆次数和最后一次登录时间的函数如下
 
 ```java
-final Function<List, Instant> getLastLoginTime = list ->
-                    Collections.max((List<LogEntry>) list, Comparator.comparing(LogEntry::getTimestamp)).getTimestamp();
+final Function<List, Instant> getLastLoginTime =
+    list ->
+        Collections.max((List<LogEntry>) list, Comparator.comparing(LogEntry::getTimestamp))
+             .getTimestamp();
 final Function<List, Integer> loginCount = List::size;
 ```
 
 然后按照登陆次数排序，倒序，如果登陆次数一样，就应该按照最后一次登陆时间排序。
+
 ```java
 .sorted(Comparator.comparing(LogEntry::getCount)
                             .thenComparing(LogEntry::getTimestamp)
