--- a/_posts/2017-01-14-Java---函数式编程实战.md
+++ b/_posts/2017-01-14-Java---函数式编程实战.md
@@ -94,7 +94,7 @@ stream.map(LogEntry::parse)
 
 分组之后，返回的是一个 hashMap ，Key 是 String, 用户名， Value 是 List ，一组日志。list.size 就是登陆次数。那么我们转换为登陆次数和最后一次登录时间。
 
-```
+```java
 final Function<Map.Entry<String, List<LogEntry>>, List<LogEntry>> getValue
      = Map.Entry::getValue;
 final Function<Map.Entry<String, List<LogEntry>>, LogEntry> mergeLoginEntry
