--- a/_posts/2017-01-14-Java---函数式编程实战.md
+++ b/_posts/2017-01-14-Java---函数式编程实战.md
@@ -123,6 +123,20 @@ final Function<List, Integer> loginCount = List::size;
                             .thenComparing(LogEntry::getTimestamp)
 ```
 
+结论，我们可以看到高阶函数很好的表达能力，高阶函数，就是指一个函数的参数或者返回值，还是一个函数。这个例子大量使用了高阶函数。
+
+- Comparator.comparing
+- Comparator::thenComparing
+- Collections::max
+- Stream::map
+- Function::andThen
+- Stream::sorted
+- Collectors::groupingBy
+- List::forEach
+
+
+
+
 最后，我们输出结果
 
 ```java
