--- a/_posts/2017-01-14-Java---函数式编程实战.md
+++ b/_posts/2017-01-14-Java---函数式编程实战.md
@@ -24,7 +24,7 @@ Java8 提供了函数式编程的能力，[这里介绍过 java8 的高阶函数
 2017/01/14 12:45:55 user "Peter" login
 ```
 
-输入是这样一个文件，希望输出一个统计结果，按照登陆次数排序，如果登陆次数相同，按照登陆时间倒序排序。
+输入是这样一个文件，希望输出一个统计结果，按照登录次数排序，如果登录次数相同，按照登录时间倒序排序。
 
 类似
 
@@ -53,7 +53,7 @@ Stream<String> stream = Files.lines(Paths.get(fileName))
     }
 ```
 
-解析一行日志，找到我们感兴趣的登陆日志。
+解析一行日志，找到我们感兴趣的登录日志。
 
 ```java
      private static final Pattern p = Pattern.compile(
@@ -67,7 +67,7 @@ Stream<String> stream = Files.lines(Paths.get(fileName))
                     return LogEntry.builder()
                             .timestamp(simpleDateFormat.parse(dateString).toInstant())
                             .user(matcher.group(2))
-                            .count(1) // 登陆次数默认为一次
+                            .count(1) // 登录次数默认为一次
                             .build();
                 } catch (ParseException e) {
                     e.printStackTrace();
@@ -86,13 +86,19 @@ Stream<String> stream = Files.lines(Paths.get(fileName))
 stream.map(LogEntry::parse)
 ```
 
-然后，我们要对分组，根据统计登陆次数。
+log 文件中，可能有其他的 log，我们无法解析称为 LogEntry ，那么就忽略这些记录
+
+```java
+.filter(e -> e != null)
+```
+
+然后，我们要对分组，根据统计登录次数。
 
 ```java
 .collect(Collectors.groupingBy(LogEntry::getUser))
 ```
 
-分组之后，返回的是一个 hashMap ，Key 是 String, 用户名， Value 是 List ，一组日志。list.size 就是登陆次数。那么我们转换为登陆次数和最后一次登录时间。
+分组之后，返回的是一个 hashMap ，Key 是 String, 用户名， Value 是 List ，一组日志。list.size 就是登录次数。那么我们转换为登录次数和最后一次登录时间。
 
 ```java
 final Function<Map.Entry<String, List<LogEntry>>, List<LogEntry>> getValue
@@ -106,7 +112,7 @@ final Function<Map.Entry<String, List<LogEntry>>, LogEntry> mergeLoginEntry
 .entrySet().stream().map(mergeLoginEntry)
 ```
 
-对应的登陆次数和最后一次登录时间的函数如下
+对应的登录次数和最后一次登录时间的函数如下
 
 ```java
 final Function<List, Instant> getLastLoginTime =
@@ -116,7 +122,7 @@ final Function<List, Instant> getLastLoginTime =
 final Function<List, Integer> loginCount = List::size;
 ```
 
-然后按照登陆次数排序，倒序，如果登陆次数一样，就应该按照最后一次登陆时间排序。
+然后按照登录次数排序，倒序，如果登录次数一样，就应该按照最后一次登录时间排序。
 
 ```java
 .sorted(Comparator.comparing(LogEntry::getCount)
@@ -138,11 +144,14 @@ final Function<List, Integer> loginCount = List::size;
 - Comparator::thenComparing
 - Collections::max
 - Stream::map
+- Stream::filter
 - Function::andThen
 - Stream::sorted
 - Collectors::groupingBy
 - List::forEach
 
+
+延伸思考， Collector::groupingBy 需要创建一个全新的 list ，但是我们只需要统计 list 的长度和 list 中最大的登录时间，这里如果进一步优化，可以让 groupingBy 直接返回一个新的登录记录。用来减少空间复杂度，降低内存使用量。同时也可以减少后面排序的操作，降低了时间复杂度。
 
 
 
@@ -190,6 +199,7 @@ public class ExLogAnalyzerTest {
                     .user(list.get(0).getUser())
                     .build());
             stream.map(LogEntry::parse)
+                    .filter(e -> e != null)
                     .collect(Collectors.groupingBy(LogEntry::getUser))
                     .entrySet().stream()
                     .map(mergeLoginEntry)
@@ -237,11 +247,5 @@ public class ExLogAnalyzerTest {
     }
 }
 ```
-
-
-
-
-
-
 
 [HOF]: http://wcy123.github.io/2017/01/07/JAVA-中的高阶函数/
