--- a/_posts/2017-01-14-Java---函数式编程实战.md
+++ b/_posts/2017-01-14-Java---函数式编程实战.md
@@ -86,7 +86,7 @@ Stream<String> stream = Files.lines(Paths.get(fileName))
 stream.map(LogEntry::parse)
 ```
 
-log 文件中，可能有其他的 log，我们无法解析称为 LogEntry ，那么就忽略这些记录
+log 文件中，可能有其他的 log，我们无法解析为 LogEntry ，那么就忽略这些记录
 
 ```java
 .filter(e -> e != null)
