--- a/_posts/2017-01-14-Java---函数式编程实战.md
+++ b/_posts/2017-01-14-Java---函数式编程实战.md
@@ -88,6 +88,7 @@ stream.map(LogEntry::parse)
 
 log 文件中，可能有其他的 log，我们无法解析为 LogEntry ，那么就忽略这些记录
 
+
 ```java
 .filter(e -> e != null)
 ```
@@ -153,6 +154,28 @@ final Function<List, Integer> loginCount = List::size;
 
 延伸思考， Collector::groupingBy 需要创建一个全新的 list ，但是我们只需要统计 list 的长度和 list 中最大的登录时间，这里如果进一步优化，可以让 groupingBy 直接返回一个新的登录记录。用来减少空间复杂度，降低内存使用量。同时也可以减少后面排序的操作，降低了时间复杂度。
 
+这里我们可以考虑使用 Collector::reduce ，函数式编程里面的万能妖刀。这个函数是很底层的函数，如果有其他函数能完成类似的功能，尽量不要使用这个函数。
+这样核心代码可以更加简洁了。
+
+```java
+           final BinaryOperator<LogEntry> reducer = (acc, a) -> LogEntry.builder()
+                    .count(acc.getCount() + 1)
+                    .timestamp(Collections.max(Arrays.asList(a.getTimestamp(), acc.getTimestamp())))
+                    .user(a.getUser())
+                    .build();
+            stream.map(LogEntry::parse)
+                    .filter(e -> e != null)
+                    .collect(Collectors.groupingBy(LogEntry::getUser, Collectors.reducing(reducer)))
+                    .entrySet().stream()
+                    .map(Map.Entry::getValue)
+                    .filter(Optional::isPresent)
+                    .map(Optional::get)
+                    .sorted(Comparator.comparing(LogEntry::getCount)
+                            .reversed()
+                            .thenComparing(LogEntry::getTimestamp))
+                    .collect(Collectors.toList())
+                    .forEach(System.out::println);
+```
 
 
 附录：完整的代码
