--- a/_posts/2017-01-25-在-Java-中，我们尽量避免使用-null.md
+++ b/_posts/2017-01-25-在-Java-中，我们尽量避免使用-null.md
@@ -163,4 +163,4 @@ aInt.flatMap(YourClass::doSomethingWithInt)
 
 注： `flatMap` 就是 haskell 里面 `bind` 操作符， `Optional` 对应的就是 `Maybe` Monad 。
 
-`flatMap` 很好的使用了这种模式。
+`flatMap` 很好的使用了这种模式。 `map` 有类似的操作。
