--- a/blog/2017-02-21-神经网络学习笔记.md
+++ b/blog/2017-02-21-神经网络学习笔记.md
@@ -18,3 +18,9 @@ $$
 where
   * $\vec w$ 权重，0 .. 1
   * $\vec x$ 输入，$-\inf$ .. $+\inf$
+
+# sigmoid
+
+1. 输出是一个平滑过的窗口函数，叫做 activation function
+2. 输出是 0..1 之间的实数
+3.
