--- a/blog/2017-03-08-用-markdown-写笔记.md
+++ b/blog/2017-03-08-用-markdown-写笔记.md
@@ -1,3 +1,8 @@
+---
+title: 用 Makefile + pandoc + markdown 写博客
+---
+# 用 Makefile + pandoc + markdown 写博客
+
 静态页面生成有很多工具，我用过 Jekyll, Hugo, Hexo 等等。我原来用 Jekyll
 写笔记，其实也够用了。最近想画图，这个东西不能自动集成 metapost ，也是挺麻烦的。
 
