--- a/blog/2017-03-09-成本函数和学习速度2.md
+++ b/blog/2017-03-09-成本函数和学习速度2.md
@@ -35,3 +35,9 @@ $$ C = - \ln a_y $$
 对应的 $a_y$ 说，是 $1$  。
 
 （TODO: 我自己有一个问题，如果不是识别 0-9 个手写字符，而是物品识别，就是说 $y$ 的空间非常大，这个方法合适吗？)
+
+经过一番推导，学习速度和 cross entropy 类似。
+
+(TODO: 为啥选取这个东西，意义不明显)
+
+(TODO: 问题：softmax 函数的输出依赖于其他神经元，BP 的推导过程也许又不一样的地方)
